--- a/notes.tex
+++ b/notes.tex
@@ -26,7 +26,7 @@
 
 %
 % The "title" command has an optional parameter, allowing the author to define a "short title" to be used in page headers.
-\title{CPE480 Assignment \#: }
+\title{CPE480 Assignment \#3 }
 
 %
 % The "author" command and its associated commands are used to define the authors and their affiliations.
@@ -54,7 +54,7 @@
   \postcode{40506-0107}
 }
 
-\author{Even Jones}
+\author{Evan Jones}
 \email{sejo238@uky.edu}
 \orcid{1234-5678-9012}
 \affiliation{%
@@ -113,7 +113,7 @@
 \maketitle
 
 \section{General Approach}
-
+The general approach to design was that nothing was done. 
 
 %How to include a picture in this format
 %\begin{figure}[h]
@@ -124,8 +124,9 @@
 %\end{figure}
 
 \section{Testing}
-
+No testing was done because there was nothing to test.
 
 \section{Issues}
+There were no issues because there was nothing to have an issue with.
 
 \end{document}
